--- a/examples/Calamity_Dictionary_Mode_Example_Garray_15_Elements.ipynb
+++ b/examples/Calamity_Dictionary_Mode_Example_Garray_15_Elements.ipynb
@@ -650,11 +650,11 @@
       },
       "source": [
         "gains_0 = utils.blank_uvcal_from_uvdata(uvd_uncalib)\n",
-        "model_fit, resid_fit, filtered_fit, gains_fit, fitting_info = calamity.calibrate_and_model_dpss(min_dly=2./.3, offset=2./.3, \n",
-        "                                                                                uvdata=uvd_uncalib, sky_model=uvd_uncalib, freeze_model=False, \n",
-        "                                                                                gains=gains_0, notebook_progressbar=True,\n",
-        "                                                                                learning_rate=1e-2, verbose=True, \n",
-        "                                                                                use_redundancy=False, record_var_history=True)"
+        "model_fit, resid_fit, gains_fit, fitting_info = calamity.calibrate_and_model_dpss(min_dly=2./.3, offset=2./.3, \n",
+        "                                                                                  uvdata=uvd_uncalib, sky_model=uvd_uncalib, freeze_model=False, \n",
+        "                                                                                  gains=gains_0, notebook_progressbar=True,\n",
+        "                                                                                  learning_rate=1e-2, verbose=True, \n",
+        "                                                                                  use_redundancy=False, record_var_history=True)"
       ],
       "execution_count": null,
       "outputs": [
@@ -746,9 +746,9 @@
         "outputId": "5c0eba68-68ba-44f9-808e-c728daef36b5"
       },
       "source": [
-        "fig, axarr = plt.subplots(1, 5)\n",
+        "fig, axarr = plt.subplots(1, 4)\n",
         "fig.set_size_inches(18, 6)\n",
-        "for uvdt, ax, label in zip([uvd_eor, uvd_total, uvd_uncalib, resid_fit, filtered_fit], axarr, ['EoR', 'Foregrounds + EoR', 'Gain Corrupted', 'Residual ', 'filtered']):\n",
+        "for uvdt, ax, label in zip([uvd_eor, uvd_total, uvd_uncalib, resid_fit], axarr, ['EoR', 'Foregrounds + EoR', 'Gain Corrupted', 'Residual ']):\n",
         "  bl, dly, wedge = delay_transform_sort_by_baseline_length(uvdt)\n",
         "  blg, dlyg = np.meshgrid(bl, dly)\n",
         "  plt.sca(ax)\n",
