breakout modeling utils and gain utils.

--- a/examples/Calamity_Sparse_Mode_Example_Garray_15_Elements.ipynb
+++ b/examples/Calamity_Sparse_Mode_Example_Garray_15_Elements.ipynb
@@ -661,7 +661,7 @@
         "model_fit, resid_fit, gains_fit, fitting_info = calamity.calibrate_and_model_dpss(min_dly=2./.3, offset=2./.3, \n",
         "                                                                                uvdata=uvd_uncalib, sky_model=uvd_uncalib, freeze_model=False, \n",
         "                                                                                gains=gains_0, notebook_progressbar=True, correct_resid=True, correct_model=True,\n",
-        "                                                                                learning_rate=1e-2, verbose=True, modeling='sparse_tensor',\n",
+        "                                                                                learning_rate=1e-2, verbose=True, modeling_paradigm='sparse_tensor',\n",
         "                                                                                use_redundancy=False, record_var_history=True)"
       ],
       "execution_count": 9,
