refactor code to use "calibration" instead of calamity.

--- a/examples/Calamity_Example_Garray_15_Elements.ipynb
+++ b/examples/Calamity_Example_Garray_15_Elements.ipynb
@@ -1609,7 +1609,7 @@
         "from IPython.display import display, HTML\n",
         "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
         "from calamity import cal_utils\n",
-        "from calamity import calamity\n",
+        "from calamity import calibration\n",
         "import numpy as np\n",
         "from uvtools import dspec\n",
         "import matplotlib.pyplot as plt\n",
